add change GridBaseTest